--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             <div class="about-us__video-photo">
               <picture>
                   <!-- 1х: 678px; 2x: 1356px -->
-                <source type="image/webp" media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile_1x.webp 1x, img/photo-supergym-tablet-mobile_2x.webp 2x">
+                <source type="image/webp" media="(min-width: 320px) and (max-width: 1199px)" data-srcset="img/photo-supergym-tablet-mobile_1x.webp 1x, img/photo-supergym-tablet-mobile_2x.webp 2x">
                   <!-- 1х: 660px; 2x: 1320px -->
-                <source type="image/webp" srcset="img/photo-supergym-desktop_1x.webp 1x, img/photo-supergym-desktop_2x.webp 2x">
+                <source type="image/webp" data-srcset="img/photo-supergym-desktop_1x.webp 1x, img/photo-supergym-desktop_2x.webp 2x">
                   <!-- 1х: 678px; 2x: 1356px -->
-                <source media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile@1x.jpg 1x, img/photo-supergym-tablet-mobile@2x.jpg 2x">
+                <source media="(min-width: 320px) and (max-width: 1199px)" data-srcset="img/photo-supergym-tablet-mobile@1x.jpg 1x, img/photo-supergym-tablet-mobile@2x.jpg 2x">
                   <!-- 1х: 660px; 2x: 1320px -->
-                <img class="about-us__image" src="img/photo-supergym-desktop@1x.jpg" srcset="img/photo-supergym-desktop@2x.jpg 2x" width="660" height="401" alt="Тренажерный зал">
+                <img class="about-us__image b-lazy" src="img/placeholder.jpg" data-src="img/photo-supergym-desktop@1x.jpg" data-srcset="img/photo-supergym-desktop@2x.jpg 2x" width="660" height="401" alt="Тренажерный зал">
               </picture>
               <video class="about-us__video" width="364" height="228" poster="img/image-supergym-video.png" tabindex="0">
               </video>
@@ -198,9 +198,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-anna@1x.webp 1x, img/photo-instructor-anna@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-anna@1x.webp 1x, img/photo-instructor-anna@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-anna@1x.jpg" srcset="img/photo-instructor-anna@2x.jpg 2x" width="260" height="294" alt="Инструктор Анна">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-anna@1x.jpg" data-srcset="img/photo-instructor-anna@2x.jpg 2x" width="260" height="294" alt="Инструктор Анна">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -215,9 +215,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-aleksey@1x.webp 1x, img/photo-instructor-aleksey@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-aleksey@1x.webp 1x, img/photo-instructor-aleksey@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-aleksey@1x.jpg" srcset="img/photo-instructor-aleksey@2x.jpg 2x" width="260" height="294" alt="Инструктор Алексей">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-aleksey@1x.jpg" data-srcset="img/photo-instructor-aleksey@2x.jpg 2x" width="260" height="294" alt="Инструктор Алексей">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -232,9 +232,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-aleksandr@1x.webp 1x, img/photo-instructor-aleksandr@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-aleksandr@1x.webp 1x, img/photo-instructor-aleksandr@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-aleksandr@1x.jpg" srcset="img/photo-instructor-aleksandr@2x.jpg 2x" width="260" height="294" alt="Инструктор Александр">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-aleksandr@1x.jpg" data-srcset="img/photo-instructor-aleksandr@2x.jpg 2x" width="260" height="294" alt="Инструктор Александр">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -249,9 +249,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-maria@1x.webp 1x, img/photo-instructor-maria@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-maria@1x.webp 1x, img/photo-instructor-maria@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-maria@1x.jpg" srcset="img/photo-instructor-maria@2x.jpg 2x" width="260" height="294" alt="Инструктор Мария">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-maria@1x.jpg" data-srcset="img/photo-instructor-maria@2x.jpg 2x" width="260" height="294" alt="Инструктор Мария">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -266,9 +266,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-aleksey@1x.webp 1x, img/photo-instructor-aleksey@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-aleksey@1x.webp 1x, img/photo-instructor-aleksey@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-aleksey@1x.jpg" srcset="img/photo-instructor-aleksey@2x.jpg 2x" width="260" height="294" alt="Инструктор Алексей">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-aleksey@1x.jpg" data-srcset="img/photo-instructor-aleksey@2x.jpg 2x" width="260" height="294" alt="Инструктор Алексей">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -283,9 +283,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-maria@1x.webp 1x, img/photo-instructor-maria@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-maria@1x.webp 1x, img/photo-instructor-maria@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-maria@1x.jpg" srcset="img/photo-instructor-maria@2x.jpg 2x" width="260" height="294" alt="Инструктор Мария">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-maria@1x.jpg" data-srcset="img/photo-instructor-maria@2x.jpg 2x" width="260" height="294" alt="Инструктор Мария">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -300,9 +300,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-aleksandr@1x.webp 1x, img/photo-instructor-aleksandr@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-aleksandr@1x.webp 1x, img/photo-instructor-aleksandr@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-aleksandr@1x.jpg" srcset="img/photo-instructor-aleksandr@2x.jpg 2x" width="260" height="294" alt="Инструктор Александр">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-aleksandr@1x.jpg" data-srcset="img/photo-instructor-aleksandr@2x.jpg 2x" width="260" height="294" alt="Инструктор Александр">
                   </picture>
                 </li>
                 <li class="instructors__item">
@@ -317,9 +317,9 @@
                   </div>
                   <picture>
                       <!-- 1х: 260px; 2x: 520px -->
-                    <source type="image/webp" srcset="img/photo-instructor-anna@1x.webp 1x, img/photo-instructor-anna@2x.webp 2x">
+                    <source type="image/webp" data-srcset="img/photo-instructor-anna@1x.webp 1x, img/photo-instructor-anna@2x.webp 2x">
                       <!-- 1х: 260px; 2x: 520px -->
-                    <img src="img/photo-instructor-anna@1x.jpg" srcset="img/photo-instructor-anna@2x.jpg 2x" width="260" height="294" alt="Инструктор Анна">
+                    <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-instructor-anna@1x.jpg" data-srcset="img/photo-instructor-anna@2x.jpg 2x" width="260" height="294" alt="Инструктор Анна">
                   </picture>
                 </li>
               </ul>
@@ -408,9 +408,9 @@
                     <div class="feedback__item-wrapper">
                       <picture>
                           <!-- 1х: 80px; 2x: 160px -->
-                        <source type="image/webp" srcset="img/photo-feedback-anna@1x.webp 1x, img/photo-feedback-anna@2x.webp 2x">
+                        <source type="image/webp" data-srcset="img/photo-feedback-anna@1x.webp 1x, img/photo-feedback-anna@2x.webp 2x">
                           <!-- 1х: 80px; 2x: 160px -->
-                        <img src="img/photo-feedback-anna@1x.jpg" srcset="img/photo-feedback-anna@2x.jpg 2x" width="80" height="80" alt="Анна Орлова">
+                        <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-feedback-anna@1x.jpg" data-srcset="img/photo-feedback-anna@2x.jpg 2x" width="80" height="80" alt="Анна Орлова">
                       </picture>
                       <h3>Анна Орлова</h3>
                     </div>
@@ -422,9 +422,9 @@
                     <div class="feedback__item-wrapper">
                       <picture>
                           <!-- 1х: 80px; 2x: 160px -->
-                        <source type="image/webp" srcset="img/photo-feedback-anna@1x.webp 1x, img/photo-feedback-anna@2x.webp 2x">
+                        <source type="image/webp" data-srcset="img/photo-feedback-anna@1x.webp 1x, img/photo-feedback-anna@2x.webp 2x">
                           <!-- 1х: 80px; 2x: 160px -->
-                        <img src="img/photo-feedback-anna@1x.jpg" srcset="img/photo-feedback-anna@2x.jpg 2x" width="80" height="80" alt="Орлова Анна">
+                        <img class="b-lazy" src="img/placeholder.jpg" data-src="img/photo-feedback-anna@1x.jpg" data-srcset="img/photo-feedback-anna@2x.jpg 2x" width="80" height="80" alt="Орлова Анна">
                       </picture>
                       <h3>Орлова Анна</h3>
                     </div>
