--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Омский фитнес центр Supergym: тренажерный зал, групповые занятия, кардио-зона">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Liga A: Fitness Center</title>
-    <link href="fonts/robotocondensedlight.woff2" rel="preload" as="font">
-    <link href="fonts/robotocondensedregular.woff2" rel="preload" as="font">
-    <link href="fonts/robotocondensedbold.woff2" rel="preload" as="font">
-    <link href="fonts/bebasneueregular.woff2" rel="preload" as="font">
-    <link href="fonts/bebasneuebold.woff2" rel="preload" as="font">
+    <link href="fonts/robotocondensedlight.woff2" rel="preload" as="font" crossorigin="anonymous">
+    <link href="fonts/robotocondensedregular.woff2" rel="preload" as="font" crossorigin="anonymous">
+    <link href="fonts/robotocondensedbold.woff2" rel="preload" as="font" crossorigin="anonymous">
+    <link href="fonts/bebasneueregular.woff2" rel="preload" as="font" crossorigin="anonymous">
+    <link href="fonts/bebasneuebold.woff2" rel="preload" as="font" crossorigin="anonymous">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
@@ -68,11 +68,11 @@
             <div class="about-us__video-photo">
               <picture>
                   <!-- 1х: 678px; 2x: 1356px -->
-                <!-- <source type="image/webp" media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile_1x.webp 1x, img/photo-supergym-tablet-mobile_2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile_1x.webp 1x, img/photo-supergym-tablet-mobile_2x.webp 2x">
                   <!-- 1х: 660px; 2x: 1320px -->
                 <source type="image/webp" srcset="img/photo-supergym-desktop_1x.webp 1x, img/photo-supergym-desktop_2x.webp 2x">
                   <!-- 1х: 678px; 2x: 1356px -->
-                <!-- <source media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile@1x.jpg 1x, img/photo-supergym-tablet-mobile@2x.jpg 2x"> -->
+                <source media="(min-width: 320px) and (max-width: 1199px)" srcset="img/photo-supergym-tablet-mobile@1x.jpg 1x, img/photo-supergym-tablet-mobile@2x.jpg 2x">
                   <!-- 1х: 660px; 2x: 1320px -->
                 <img class="about-us__image" src="img/photo-supergym-desktop@1x.jpg" srcset="img/photo-supergym-desktop@2x.jpg 2x" width="660" height="401" alt="Тренажерный зал">
               </picture>
