--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Омский фитнес центр Supergym: тренажерный зал, групповые занятия, кардио-зона">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Liga A: Fitness Center</title>
-    <link href="fonts/robotocondensedlight.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link href="fonts/robotocondensedregular.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link href="fonts/robotocondensedbold.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link href="fonts/bebasneueregular.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link href="fonts/bebasneuebold.woff2" rel="preload" as="font" crossorigin="anonymous">
+    <link href="fonts/robotocondensedlight.woff2" rel="preload" as="font" crossorigin="">
+    <link href="fonts/robotocondensedregular.woff2" rel="preload" as="font" crossorigin="">
+    <link href="fonts/robotocondensedbold.woff2" rel="preload" as="font" crossorigin="">
+    <link href="fonts/bebasneueregular.woff2" rel="preload" as="font" crossorigin="">
+    <link href="fonts/bebasneuebold.woff2" rel="preload" as="font" crossorigin="">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
